# bch_codes

./: CMakeLists.txt  bch_codes.cpp  bch_codes.h  build.bat  chase_decoder.cpp  chase_decoder.h  experiment.cpp  galois_field.cpp  galois_field.h  main.cpp  polynomials_field.cpp  polynomials_field.h  random.cpp  random.h  tests.cpp
