cmake_minimum_required(VERSION 3.24)
project(bch_codes)

set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
#add_subdirectory(lib)
#include_directories(lib/googletest/include)
add_executable(tests tests.cpp bch_codes.h bch_codes.cpp galois_field.h galois_field.cpp chase_decoder.h random.h)
add_executable(main main.cpp bch_codes.h bch_codes.cpp galois_field.h galois_field.cpp chase_decoder.h random.h)
add_executable(experiment experiment.cpp bch_codes.h bch_codes.cpp galois_field.h galois_field.cpp chase_decoder.h random.h chase_decoder.cpp)
#target_link_libraries(tests GTest::gtest GTest::gtest_main)
